# orkestra

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: api_explore.py  ecommerce_chatbot.py  events_example.py  stress_log.md  stress_test.py
integrations/openclaw/: README.md  SKILL.md  install.sh  proxy.py
src/orkestra/: __init__.py  _events.py  _middleware.py  _types.py  multi_provider.py  provider.py
src/orkestra/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
src/orkestra/registry/: __init__.py  models.py  strategies.py
src/orkestra/router/: __init__.py  cache.py  embedder.py  knn.py
tests/: test_cache.py  test_events.py  test_middleware.py  test_multi_provider.py  test_provider.py  test_provider_hooks.py  test_registry.py  test_router.py  test_strategies.py  test_strategy_integration.py
