[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orkestra-router"
version = "0.0.1"
description = "Smart LLM routing across providers - automatically picks the most cost-efficient model for your prompt"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Orkestra Team" },
]
keywords = ["llm", "routing", "ai", "cost-optimization", "gemini", "claude", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.urls]
Homepage = "https://github.com/orkestra-ai/orkestra"
Repository = "https://github.com/orkestra-ai/orkestra"
Issues = "https://github.com/orkestra-ai/orkestra/issues"

[project.optional-dependencies]
google = ["google-genai>=1.0.0"]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
all = [
    "google-genai>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
